--- a/docs/presentation/presentation.tex
+++ b/docs/presentation/presentation.tex
@@ -1,14 +1,11 @@
 \documentclass{beamer}
 \usepackage{amsfonts,amsmath,oldgerm}
+\usepackage{bytefield}
 \usetheme{sintef}
-
-\newcommand{\testcolor}[1]{\colorbox{#1}{\textcolor{#1}{test}}~\texttt{#1}}
-
 \usefonttheme[onlymath]{serif}
-
 \titlebackground*{assets/background}
 
-\newcommand{\hrefcol}[2]{\textcolor{cyan}{\href{#1}{#2}}}
+\newcommand{\rot}[1]{\rotatebox{90}{#1}}
 
 \title{Implementing XBF: An Efficient Self-Describing Binary Format}
 % \subtitle{Using \LaTeX\ to prepare slides}
@@ -16,328 +13,181 @@
 \author{\href{mailto:dkrautha@pm.me}{David Krauthamer}}
 % \IDnumber{1234567}
 
+\setbeameroption{show notes}
+
 \begin{document}
 \maketitle
 
-\begin{frame}
-
-	This template is based on \hrefcol{https://www.overleaf.com/latex/templates/sapienza-presentation/yyksmrskffhk}{Sapienza Presentation} from \hrefcol{mailto:andrea@gasparini.cloud}{Andrea Gasparini}
-
-	\vspace{\baselineskip}
-
-	The above template is a based on \hrefcol{https://www.overleaf.com/latex/templates/sintef-presentation/jhbhdffczpnx}{SINTEF Presentation} from \hrefcol{mailto:federico.zenith@sintef.no}{Federico Zenith} and its derivation \hrefcol{https://github.com/TOB-KNPOB/Beamer-LaTeX-Themes}{Beamer-LaTeX-Themes} from Liu Qilong
-
-	\vspace{\baselineskip}
-
-	In the following you find a brief introduction on how to use \LaTeX\ and the beamer package to prepare slides, based on the one written by \hrefcol{mailto:federico.zenith@sintef.no}{Federico Zenith} for \hrefcol{https://www.overleaf.com/latex/templates/sintef-presentation/jhbhdffczpnx}{SINTEF Presentation}
-
-	% This template is released under \hrefcol{https://creativecommons.org/licenses/by-nc/4.0/legalcode}{Creative Commons CC BY 4.0} license
-
-\end{frame}
+% \begin{frame}
+%
+% 	This template is based on \hrefcol{https://www.overleaf.com/latex/templates/sapienza-presentation/yyksmrskffhk}{Sapienza Presentation} from \hrefcol{mailto:andrea@gasparini.cloud}{Andrea Gasparini}
+%
+% 	\vspace{\baselineskip}
+%
+% 	The above template is a based on \hrefcol{https://www.overleaf.com/latex/templates/sintef-presentation/jhbhdffczpnx}{SINTEF Presentation} from \hrefcol{mailto:federico.zenith@sintef.no}{Federico Zenith} and its derivation \hrefcol{https://github.com/TOB-KNPOB/Beamer-LaTeX-Themes}{Beamer-LaTeX-Themes} from Liu Qilong
+%
+% 	\vspace{\baselineskip}
+%
+% 	In the following you find a brief introduction on how to use \LaTeX\ and the beamer package to prepare slides, based on the one written by \hrefcol{mailto:federico.zenith@sintef.no}{Federico Zenith} for \hrefcol{https://www.overleaf.com/latex/templates/sintef-presentation/jhbhdffczpnx}{SINTEF Presentation}
+%
+% 	% This template is released under \hrefcol{https://creativecommons.org/licenses/by-nc/4.0/legalcode}{Creative Commons CC BY 4.0} license
+%
+% \end{frame}
 
 \section{Introduction}
 
-\begin{frame}{Beamer for SINTEF slides}
+\begin{frame}{Web Data Interchange Formats}
 	\begin{itemize}
-		\item We assume you can use \LaTeX; if you cannot,
-		      \hrefcol{http://en.wikibooks.org/wiki/LaTeX/}{you can learn it here}
-		\item Beamer is one of the most popular and powerful document
-		      classes for presentations in \LaTeX
-		\item Beamer has also a detailed
-		      \hrefcol{http://www.ctan.org/tex-archive/macros/latex/contrib/beamer/doc/beameruserguide.pdf}{user
-			      manual}
-		\item Here we will present only the most basic features to get you up to speed
+		\item Human-Readable and Self-Describing
+		      \note[item]{Most formats on the web are human-readable and self-describing}
+		      \note[item]{Self describing means they include metadata to describe themselves, and don't require an external schema}
+		      \note[item]{Human readable means plain text, ASCII or utf-8}
+		\item Most common: JSON and XML
+		      \note[item]{The most common of these formats is JSON and XML}
+		\item Alternatives: CSV, MessagePack, CBOR
+		      \note[item]{There are other human-readable formats such as CSV}
+		      \note[item]{And others, such as CBOR (concise binary object representation), and MessagePack that are still self-describing, but use a binary format instead}
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Beamer vs. PowerPoint}
-	Compared to PowerPoint, using \LaTeX\ is better because:
+\begin{frame}{Shortcomings of Current Formats}
 	\begin{itemize}
-		\item It is not What-You-See-Is-What-You-Get, but
-		      What-You-\emph{Mean}-Is-What-You-Get:\\
-		      you write the content, the computer does the typesetting
-		\item Produces a \texttt{pdf}: no problems with fonts, formulas,
-		      program versions
-		\item Easier to keep consistent style, fonts, highlighting, etc.
-		\item Math typesetting in \TeX\ is the best:
-		      \begin{equation*}
-			      \mathrm{i}\,\hslash\frac{\partial}{\partial t} \Psi(\mathbf{r},t) =
-			      -\frac{\hslash^2}{2\,m}\nabla^2\Psi(\mathbf{r},t)
-			      + V(\mathbf{r})\Psi(\mathbf{r},t)
-		      \end{equation*}
-
+		\item Repeated sending of metadata.
+		\item Inefficiency of plain text.
+		      \note[item]{Expensive conversion between plain text and binary}
+		      \note[item]{Requires more bytes to store the same data}
+		\item Use of big-endian.
+		      \note[item]{Most modern processors (x86 and ARM) are little-endian}
 	\end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Getting Started}
-	\framesubtitle{Selecting the SINTEF Theme}
-	To start working with \texttt{sintefbeamer}, start a \LaTeX\ document with the
-	preamble:
-	\begin{block}{Minimum SINTEF Beamer Document}
-		\verb|\documentclass{beamer}|\\
-		\verb|\usetheme{sintef}|\\
-		\verb|\begin{document}|\\
-		\verb|\begin{frame}{Hello, world!}|\\
-		\verb|\end{frame}|\\
-		\verb|\end{document}|\\
-	\end{block}
-\end{frame}
-
-\begin{frame}[fragile]{Title page}
-	To set a typical title page, you call some commands in the preamble:
-	\begin{block}{The Commands for the Title Page}
-		\begin{verbatim}
-\title{Sample Title}
-\subtitle{Sample subtitle}
-\author{First Author, Second Author}
-\date{\today} % Can also be (ab)used for conference name &c.
-\end{verbatim}
-	\end{block}
-	You can then write out the title page with \verb|\maketitle|.
-
-	To set a \textbf{background image} use the \verb|\titlebackground| command
-	before \verb|\maketitle|; its only argument is the name (or path) of a graphic
-	file.
-
-	If you use the \textbf{starred version} \verb|\titlebackground*|, the image
-	will be clipped to a split view on the right side of the title slide.
-
-\end{frame}
-
-\begin{frame}[fragile]{Writing a Simple Slide}
-	\framesubtitle{It's really easy!}
-	\begin{itemize}[<+->]
-		\item A typical slide has bulleted lists
-		\item These can be uncovered in sequence
-	\end{itemize}
-	\begin{block}{Code for a Page with an Itemised List}<+->
-		\begin{verbatim}
-\begin{frame}{Writing a Simple Slide}
-\framesubtitle{It's really easy!}
-\begin{itemize}[<+->]
-\item A typical slide has bulleted lists
-\item These can be uncovered in sequence
-\end{itemize}\end{frame}
-\end{verbatim}
-	\end{block}
-\end{frame}
-
-\section{Personalization}
-
-\footlinecolor{stevensmediumgold}
-\begin{frame}[fragile]{Changing Slide Style}
+\begin{frame}{Improvements}
 	\begin{itemize}
-		\item You can select the white or \textit{maincolor} \textbf{slide style} \emph{in the
-			      preamble} with \verb|\themecolor{white}| (default) or \verb|\themecolor{main}|
-		      \begin{itemize}
-			      \item You should \emph{not} change these within the document: Beamer does
-			            not like it
-			      \item If you \emph{really} must, you may have to add
-			            \verb|\usebeamercolor[fg]{normal text}| in the slide
-		      \end{itemize}
-		\item You can change the \textbf{footline colour} with
-		      \verb|\footlinecolor{color}|
-		      \begin{itemize}
-			      \item Place the command \emph{before} a new \verb|frame|
-			      \item There are four ``official'' colors:
-			            \testcolor{maincolor}, \testcolor{sintefyellow},
-			            \testcolor{sintefgreen}, \testcolor{sintefdarkgreen}
-			      \item Default is no footline; you can restore it with
-			            \verb|\footlinecolor{}|
-			      \item Others may work, but no guarantees!
-			      \item Should \emph{not} be used with the \verb|maincolor| theme!
-		      \end{itemize}
+		\item When possible, send metadata only a single time (mainly for homogenous lists).
+		\item Allow sending metadata to be optional, such as if a client already has it.
+		      \note[item]{Keep metadata and data separate, not coupled together}
+		\item Utilize little-endian to reduce conversions.
+		\item Prioritize a simple type system.
+		      \note[item]{Hopefully makes the implementation simpler}
 	\end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Blocks}
-	\begin{columns}
-		\begin{column}{0.3\textwidth}
-			\begin{block}{Standard Blocks}
-				These have a color coordinated with the footline (and grey in the blue theme)
-				\begin{verbatim}
-\begin{block}{title}
-content...
-\end{block}
-\end{verbatim}
-			\end{block}
-		\end{column}
-		\begin{column}{0.7\textwidth}
-			\begin{colorblock}[black]{stevenslightorange}{Colour Blocks}
-				Similar to the ones on the left, but you pick the colour. Text will be white by
-				default, but you may set it with an optional argument.
-				\small
-				\begin{verbatim}
-\begin{colorblock}[black]{sinteflightgreen}{title}
-content...
-\end{colorblock}
-\end{verbatim}
-			\end{colorblock}
-			The ``official'' colours of colour blocks are: \testcolor{sinteflilla},
-			\testcolor{maincolor}, \testcolor{sintefdarkgreen}, and
-			\testcolor{sintefyellow}.
-		\end{column}
-	\end{columns}
-\end{frame}
+\section{Format Design}
 
-\footlinecolor{}
-\begin{frame}[fragile]{Using Colours}
-	\begin{itemize}[<alert@2>]
-		\item You can use colours with the
-		      \verb|\textcolor{<color name>}{text}| command
-		\item The colours are defined in the \texttt{sintefcolor} package:
-		      \begin{itemize}
-			      \item Primary colours: \testcolor{maincolor} and its sidekick
-			            \testcolor{stevensgray}
-			      \item Secondary Colors are: \testcolor{stevensdarkgray}, \testcolor{stevensdarkblue},\testcolor{stevensmediumblue}, \testcolor{stevensmediumorange}, \testcolor{stevensmediumgold}
-			      \item Light colors are:
-			            \testcolor{stevenslightgray},\testcolor{stevenslightblue}, \testcolor{stevenslightorange}, \testcolor{stevenslightgold}
-			      \item Other colors are \testcolor{sinteflightgreen},
-			            \testcolor{sintefgreen}, \testcolor{sintefdarkgreen}
-			      \item Additional colours: \testcolor{sintefyellow}, \testcolor{sintefred},
-			            \testcolor{sinteflilla}
-			            \begin{itemize}
-				            \item These may be shaded---see the \verb|sintefcolor| documentation or
-				                  the \hrefcol{https://sintef.sharepoint.com/sites/stottetjenester/%
-					                  kommunikasjon/grafisk-profil-new/Sider/default.aspx}{SINTEF profile
-					                  manual}
-			            \end{itemize}
-		      \end{itemize}
-		\item Do \emph{not} abuse colours: \verb|\emph{}| is usually enough
-		\item Use \verb|\alert{}| to bring the \alert<2->{focus} somewhere
-		\item<2- | alert@2> If you highlight too much, you don't highlight at all!
-	\end{itemize}
-\end{frame}
-
-\begin{frame}[fragile]{Adding images}
-	\begin{columns}
-		\begin{column}{0.7\textwidth}
-			Adding images works like in normal \LaTeX:
-			\begin{block}{Code for Adding Images}
-				\begin{verbatim}
-\usepackage{graphicx}
-% ...
-\includegraphics[width=\textwidth]
-{assets/logo_RGB}
-\end{verbatim}
-			\end{block}
-		\end{column}
-		\begin{column}{0.3\textwidth}
-			\includegraphics[width=\textwidth]
-			{assets/logo_RGB}
-		\end{column}
-	\end{columns}
-\end{frame}
-
-\begin{frame}[fragile]{Splitting in Columns}
-	Splitting the page is easy and common;
-	typically, one side has a picture and the other text:
-	\begin{columns}
-		\begin{column}{0.6\textwidth}
-			This is the first column
-		\end{column}
-		\begin{column}{0.3\textwidth}
-			And this the second
-		\end{column}
-	\end{columns}
-	\begin{block}{Column Code}
-		\begin{verbatim}
-\begin{columns}
-\begin{column}{0.6\textwidth}
-  This is the first column
-\end{column}
-\begin{column}{0.3\textwidth}
-  And this the second
-\end{column}
-% There could be more!
-\end{columns}
-\end{verbatim}
-	\end{block}
-\end{frame}
-
-\begin{chapter}[assets/background_negative]{}{Special Slides}
- \begin{itemize}
-	 \item Chapter slides
-	 \item Side-picture slides
- \end{itemize}
-\end{chapter}
-
-\footlinecolor{sintefred}
-\begin{frame}[fragile]{Chapter slides}
+\begin{frame}{Primitives}
 	\begin{itemize}
-		\item Similar to \verb|frame|s, but with a few more options
-		\item Opened with \verb|\begin{chapter}[<image>]{<color>}{<title>}|
-		\item Image is optional, colour and title are mandatory
-		\item There are seven ``official'' colours: \testcolor{maincolor},
-		      \testcolor{sintefdarkgreen}, \testcolor{sintefgreen},
-		      \testcolor{sinteflightgreen}, \testcolor{sintefred}, \testcolor{sintefyellow},
-		      \testcolor{sinteflilla}.
+		\item Boolean
+		      \note[item]{True of False, one byte}
+		      \note[item]{All integers are little-endian}
+		      \note[item]{Integer types are equivalent to the types in stdint.h C header}
+		\item U8, U16, U32, U64, U128, U256
+		      \note[item]{Unsigned Integer Types}
 		      \begin{itemize}
-			      \item Strangely enough, these are \emph{more} than the official colours
-			            for the footline.
-			      \item It may still be a nice touch to change the footline of following
-			            slides to the same color of a chapter slide. Your choice.
+			      \item Equivalent to uint*\_t types in C
 		      \end{itemize}
-		\item Otherwise, \verb|chapter| behaves just like \verb|frame|.
+		\item I8, I16, I32, I64, I128, I256
+		      \note[item]{Signed Integer Types}
+		      \begin{itemize}
+			      \item Equivalent to int*\_t types in C
+		      \end{itemize}
+		\item F32, F64
+		      \note[item]{Floating Point Types}
+		      \begin{itemize}
+			      \item IEEE 754 floating point numbers
+		      \end{itemize}
+		\item Bytes  (Non-UTF-8 Bytes)
+		      \note[item]{String but doesn't have to be UTF-8}
+		\item String (UTF-8 Bytes)
+		      \note[item]{Sends length as u64 followed by UTF-8 bytes}
 	\end{itemize}
 \end{frame}
 
-\begin{sidepic}{assets/background_alternative}{Side-Picture Slides}
-	\begin{itemize}
-		\item Opened with \texttt{$\backslash$begin\{sidepic\}\{<image>\}\{<title>\}}
-		\item Otherwise, \texttt{sidepic} works just like \texttt{frame}
-	\end{itemize}
-\end{sidepic}
+\begin{frame}{Primitive Metadata}
+	\center
+	\begin{tabular}{|c|c|}
+		\hline
+		\textbf{Type} & \textbf{Discriminant} \\
+		\hline
+		Boolean       & 0                     \\
+		U8            & 1                     \\
+		U16           & 2                     \\
+		U32           & 3                     \\
+		...           & ...                   \\
+		I256          & 12                    \\
+		F32           & 13                    \\
+		F64           & 14                    \\
+		Bytes         & 15                    \\
+		String        & 16                    \\
+		\hline
+	\end{tabular}
+	\note[item]{Metadata is sent as a single byte discriminant value}
+	\note[item]{The discriminant begin at 0 with Boolean, and increase by 1 for each type}
+	\note[item]{Progress in the same order as the previous slide, with String being the final value}
+\end{frame}
 
-\footlinecolor{}
-\begin{frame}
-	\frametitle{Fonts}
+\begin{frame}[fragile]{Primitive Example}
 	\begin{itemize}
-		\item The paramount task of fonts is being readable
-		\item There are good ones...
-		      \begin{itemize}
-			      \item {\textrm{Use serif fonts only with high-definition projectors}}
-			      \item {\textsf{Use sans-serif fonts otherwise (or if you simply prefer
-				            them)}}
-		      \end{itemize}
-		\item ... and not so good ones:
-		      \begin{itemize}
-			      \item {\texttt{Never use monospace for normal text}}
-			      \item {\frakfamily Gothic, calligraphic or weird fonts: should always: be
-			            avoided}
-		      \end{itemize}
+		\item 16-Bit Unsigned Integer: 1024 \\
+		      \begin{bytefield}{24}
+			      \bitbox{8}{Disc} & \bitbox{16}{1024} \\
+			      \bitbox{8}{2} & \bitboxes{8}{04} \\
+		      \end{bytefield}
+		\item String: "hello" \\
+		      \begin{bytefield}[bitheight=\widthof{"Disc"}]{28}
+			      \bitbox{2}{\rot{Disc}} & \bitbox{16}{length} & \bitboxes{2}{hello} \\
+			      \bitboxes{2}{{16} {2} {0} {0} {0} {0} {0} {0} {0} {\rot{104}} {\rot{101}} {\rot{108}} {\rot{108}} {\rot{111}}}
+		      \end{bytefield}
+
 	\end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Look}
+\begin{frame}{Vectors (Homogenous Lists)}
 	\begin{itemize}
-		\item To insert a final slide with the title and final thanks, use \verb|\backmatter|.
-		      \begin{itemize}
-			      \item The title also appears in footlines along with the author name, you can change this text with \verb|\footlinepayoff|
-			      \item You can remove the title from the final slide with \verb|\backmatter[notitle]|
-		      \end{itemize}
-		\item The aspect ratio defaults to 16:9, and you should not change it to 4:3
-		      for old projectors as it is inherently impossible to perfectly convert a
-		      16:9 presentation to 4:3 one; spacings \emph{will} break
-		      \begin{itemize}
-			      \item The \texttt{aspectratio} argument to the \texttt{beamer} class is
-			            overridden by the SINTEF theme
-			      \item If you \emph{really} know what you are doing, check the package
-			            code and look for the \texttt{geometry} class.
-		      \end{itemize}
+		\item Homogenous list of values that has a known, variable length.
+		\item Length is sent as a part of the type, not in metadata.
+		      \note[item]{Length is an u64, the same as String and Bytes}
+		\item Length is sent, followed by the elements.
+		      \note[item]{No type info about elements, that's in metadata}
+		\item Inner type Information is \emph{not} sent.
 	\end{itemize}
 \end{frame}
 
-\section{Summary}
-
-\begin{frame}
-	\frametitle{Good Luck!}
+\begin{frame}{Vector Metadata}
 	\begin{itemize}
-		\item Enough for an introduction! You should know enough by now
-		\item If you have corrections or suggestions,
-		      \hrefcol{mailto:andrea@gasparini.cloud}{send them to me!}
+		\item Single byte discriminant value is sent (String + 1).
+		\item Followed by internal type metadata (can continue recursively).
+		\item Length is \emph{not} sent.
 	\end{itemize}
 \end{frame}
 
-\backmatter
+\begin{frame}[fragile]{Vector Example}
+	\begin{center}
+		\textbf{Vector of 16-Bit Unsigned Integers:} [42, 1024]
+
+		DV = Discriminant of a Vector
+
+		D16 = Discriminant of a 16-Bit Unsigned Integer
+
+		\begin{bytefield}{26}
+			\bitbox{2}{\rot{DV}} & \bitbox{2}{\rot{D16}} & \bitbox{16}{length} & \bitboxes{4}{{42} {1024}} \\
+			\bitboxes{2}{{17} {2} {2} {0} {0} {0} {0} {0} {0} {0} {42} {0} {0} {4}}
+		\end{bytefield}
+	\end{center}
+\end{frame}
+
+\begin{frame}{Structs (Aggregate Types)}
+	\begin{itemize}
+		\item item
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Struct Metadata}
+	\begin{itemize}
+		\item item
+	\end{itemize}
+\end{frame}
+
+\section{Results}
+
+\backmatter[notitle]
 \end{document}
